--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "autoprefixer": "^9",
     "node-sass": "4.14.1",
     "postcss": "^7",
+    "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "tailwind": "^4.0.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat",
